--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -122,6 +122,7 @@ jobs:
   upload-junit-results:
     runs-on: ubuntu-latest
     needs: [ linux-tests, macos-tests, windows-tests ]
+    if: ${{ always() }}
     steps:
       - uses: actions/checkout@master
       - name: Download test results
