Specify datetime library version

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -46,3 +46,5 @@ robolectric = { module = "org.robolectric:robolectric", version.ref = "robolectr
 okio = { module = "com.squareup.okio:okio", version.ref = "okio" }
 okio-nodefilesystem = { module = "com.squareup.okio:okio-nodefilesystem", version.ref = "okio" }
 okio-fakefilesystem = { module = "com.squareup.okio:okio-fakefilesystem", version.ref = "okio" }
+
+datetime = { module = "org.jetbrains.kotlinx:kotlinx-datetime", version = "0.4.0" }
