Update to android sourceSet layout v2

--- a/gradle.properties
+++ b/gradle.properties
@@ -3,6 +3,7 @@ kotlin.code.style=official
 kotlin.mpp.stability.nowarn=true
 kotlin.native.ignoreDisabledTargets=true
 kotlin.native.ignoreIncorrectDependencies=true
+kotlin.mpp.androidSourceSetLayoutVersion=2
 android.useAndroidX=true
 android.disableAutomaticComponentCreation=true
 # Publishing
