Migrate to gradle-maven-publish-plugin

--- a/gradle.properties
+++ b/gradle.properties
@@ -9,13 +9,16 @@ android.disableAutomaticComponentCreation=true
 # Publishing
 group=org.drewcarlson
 version=1.0.0-SNAPSHOT
-mavenUrl=https://s01.oss.sonatype.org/service/local/staging/
-mavenSnapshotUrl=https://s01.oss.sonatype.org/content/repositories/snapshots/
-pomProjectUrl=https://github.com/DrewCarlson/ObjectStore
-pomProjectDescription=A modular object storage framework for Kotlin multiplatform projects.
-pomScmUrl=https://github.com/DrewCarlson/ObjectStore.git
-pomDeveloperId=DrewCarlson
-pomDeveloperName=Drew Carlson
-pomLicenseName=Apache-2.0
-pomLicenseUrl=https://opensource.org/licenses/Apache-2.0
-pomLicenseDistribution=repo
+SONATYPE_HOST=S01
+RELEASE_SIGNING_ENABLED=true
+POM_NAME=ObjectStore
+POM_INCEPTION_YEAR=2022
+POM_URL=https://github.com/DrewCarlson/ObjectStore
+POM_DESCRIPTION=A modular object storage framework for Kotlin multiplatform projects.
+POM_SCM_URL=https://github.com/DrewCarlson/ObjectStore.git
+POM_DEVELOPER_ID=DrewCarlson
+POM_DEVELOPER_NAME=Drew Carlson
+POM_DEVELOPER_URL=https://github.com/DrewCarlson/
+POM_LICENSE_NAME=MIT
+POM_LICENSE_URL=https://opensource.org/licenses/mit-license.php
+POM_LICENSE_DIST=repo
