--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,6 +1,6 @@
 [versions]
 kotlin = { strictly = "1.8.10" }
-dokka = "1.7.20"
+dokka = "1.8.10"
 coroutines = "1.6.4"
 serialization = "1.5.0"
 atomicfu = "0.20.0"
@@ -22,6 +22,7 @@ spotless = { id = "com.diffplug.spotless", version.ref = "spotless" }
 dokka = { id = "org.jetbrains.dokka", version.ref = "dokka" }
 binaryCompat = { id = "org.jetbrains.kotlinx.binary-compatibility-validator", version.ref = "binary_compat" }
 completeKotlin = { id = "com.louiscad.complete-kotlin", version = "1.1.0" }
+mavenPublish = { id = "com.vanniktech.maven.publish", version = "0.24.0" }
 
 [libraries]
 kotlin-gradle-plugin = { module = "org.jetbrains.kotlin:kotlin-gradle-plugin", version.ref = "kotlin" }
